@@ -13,8 +13,8 @@
 	 <_description>Answer some algebra questions</_description>
 	<_prerequisite>Multiplication table</_prerequisite>
 	<_goal>In a limited time, give the product of two numbers</_goal>
-	<_manual>A multiplication with two numbers is displayed. At the
-right of the equal sign, give the product.  
-Use the left and right arrows to modify the product, and press the Enter key to check your answer.</_manual>
+	<_manual>A multiplication with two numbers is displayed. At the right of the equal sign, give the product.  
+Use the left and right arrows to modify the product, and press the Enter key to check your answer.
+You can control the speed of the timer in the GCompris configuration dialog.</_manual>
   </Board>
 </GCompris>
