@@ -13,8 +13,8 @@
 	 <_description>Answer some algebra questions</_description>
 	<_prerequisite>Simple substraction</_prerequisite>
 	<_goal>In a limited time, find the difference between two numbers</_goal>
-	<_manual>A substraction problem with two numbers is displayed. At the right of the equal sign,
-give the difference.
-Use the left and right arrows to modify your answer, and press the Enter key to check the result.</_manual>
+	<_manual>A substraction problem with two numbers is displayed. At the right of the equal sign, give the difference.
+Use the left and right arrows to modify your answer, and press the Enter key to check the result.
+You can control the speed of the timer in the GCompris configuration dialog.</_manual>
   </Board>
 </GCompris>
