@@ -14,7 +14,7 @@
 	<_prerequisite>Simple addition. Can recognize written numbers</_prerequisite>
 	<_goal>In a limited time, find the sum of of two numbers. Introduction to simple in-line addition.</_goal>
 	<_manual>A addition problem with two numbers is displayed. At the right of the equal sign, give the sum.
-Use the left and right arrows to modify the sum, and the Enter key to check your answer.</_manual>
-
+Use the left and right arrows to modify the sum, and the Enter key to check your answer.
+You can control the speed of the timer in the GCompris configuration dialog.</_manual>
   </Board>
 </GCompris>
