@@ -45,53 +45,6 @@ AC_CHECK_LIB(SDL_mixer, Mix_OpenAudio,, AC_MSG_ERROR([*** SDL_mixer not found. V
 AC_SUBST(GCOMPRIS_CFLAGS)
 AC_SUBST(GCOMPRIS_LIBS)
 
-dnl PROFILING support
-AC_MSG_CHECKING([wether we build with profils])
-AC_ARG_ENABLE(profils,
-          AC_HELP_STRING(
-          [--enable-profils],
-          [Turn on profils (needs sqlite)]),
-          with_profils="$enableval", with_profils="no")
-AC_MSG_RESULT($with_profils)
-
-dnl gcompris-edit is incompatible with profils.
-if test x$with_profils = xno; then
-dnl gcompris-edit still require gnome
-GCOMPRIS_EDIT_CFLAGS=
-GCOMPRIS_EDIT_LIBS=
-dnl By default, build gcompris-edit
-GCOMPRIS_EDIT=yes
-build_gcompris_edit=yes
-AC_ARG_WITH(editor,
-  AC_HELP_STRING(
-    [--with-editor],
-    [Tell configure to compile gcompris-edit (it requires gnome)]),
-  [GCOMPRIS_EDIT=$withval] )
-else
-  GCOMPRIS_EDIT=no
-fi
-
-if test x$GCOMPRIS_EDIT = xno; then
-  build_gcompris_edit=no
-fi
-
-dnl Finally output the required python variables and automake defines.
-AM_CONDITIONAL(GCOMPRIS_EDIT, test x$build_gcompris_edit = xyes)
-
-if test x$build_gcompris_edit = xno; then
-  AC_MSG_NOTICE([gcompris-edit build is disabled.])
-else
-  dnl gcompris-edit is requested, so check for gnome
-  LIBGNOME_REQUIRED=1.96.0
-  LIBGNOMEUI_REQUIRED=1.96.0
-
-  PKG_CHECK_MODULES(GCOMPRIS_EDIT, libgnome-2.0 >= $LIBGNOME_REQUIRED libgnomeui-2.0 >= $LIBGNOMEUI_REQUIRED)
-
-  AC_SUBST(GCOMPRIS_EDIT_CFLAGS)
-  AC_SUBST(GCOMPRIS_EDIT_LIBS)
-
-fi
-
 AC_HEADER_DIRENT
 
 AC_PROG_CC
@@ -145,7 +98,6 @@ if test "x$USE_XRANDR" == "xyes" ; then
 
   if test "x$found_randr" = "xno"; then
      AC_MSG_NOTICE(["Suitable Xrandr extension library not found - you need at least X 4.3. Will not use xrandr for fullscreen."])
-     AC_DEFINE_UNQUOTED(XRANDR, 0, [XRANDR NOT Available])
   else
      AC_DEFINE_UNQUOTED(XRANDR, 1, [XRANDR Available])
   fi
@@ -349,16 +301,21 @@ fi
 
 AC_SUBST(REQUIRE_PYTHON)
 
-dnl Check for SQLITE
-if test x$with_profils = xyes; then
+dnl SQLITE support
+AC_MSG_CHECKING([wether we build with SQLITE (if not profile will be disabled)])
+AC_ARG_ENABLE(sqlite,
+          AC_HELP_STRING(
+          [--disable-sqlite],
+          [Turn off sqlite (will disable profile)]),
+          with_sqlite="$enableval", with_sqlite="yes")
+AC_MSG_RESULT($with_sqlite)
+
+if test x$with_sqlite = xyes; then
    PKG_CHECK_MODULES(SQLITE3, sqlite3,, AC_MSG_ERROR([*** SQLITE3 not found!]))
-   use_profils=yes
-   AC_DEFINE([USE_PROFILS],[],[Profiles usage])	
-else
-   use_profils=no
+   AC_DEFINE([USE_SQLITE], 1,[SQLITE Database, Profiles are enabled])
 fi
 
-AM_CONDITIONAL(USE_PROFILS, test x$use_profils = xyes)
+AM_CONDITIONAL(USE_SQLITE, test x$with_sqlite = xyes)
 AC_SUBST(SQLITE3_CFLAGS)
 AC_SUBST(SQLITE3_LIBS)
 
@@ -622,8 +579,6 @@ echo with options:
 echo "Force python (--enable-py-build-only)    = $py_build_only"
 echo "Python plugin                            = $build_python_plugin"
 
-echo "Optional menu edition (--with-editor)    = $build_gcompris_edit"
-
 if test -x "${SDL_LIBS}"; then
 echo "SDL LIBS  (--with-sdl-prefix)            = NOT DETECTED (install sdl-devel)"
 else
@@ -632,7 +587,7 @@ fi
 
 echo "XRANDR option  (--enable-xrandr)         = $found_randr"
 
-echo "Profile system (--enable-profils)        = $use_profils"
+echo "SQLITE database (--enable-sqlite)        = $with_sqlite (profiles depend on this)"
 
 echo
 echo gcompris will be installed in ${prefix}
