@@ -1,6 +1,6 @@
 /* gcompris - gcompris.h
  *
- * Time-stamp: <2005/06/16 17:53:16 yves>
+ * Time-stamp: <2005/06/20 22:13:03 yves>
  *
  * Copyright (C) 2000,2001,2002 Bruno Coudoin
  *
@@ -47,10 +47,8 @@
 #include "skin.h"
 #include "anim.h"
 
-#ifdef USE_PROFILS
 #include "profile.h"
 #include "gcompris_db.h"
-#endif
 
 #ifdef USE_CAIRO
 #include "gcompris-cairo.h"
